--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,5 +1,5 @@
 - id: get-started
-  translation: "Get Started"
+  translation: "Start Text Player & Synthesizer"
 
 - id: on-this-page
   translation: "On this page"
